# OpenSwarmBot

./: README.md
RasberryPi gateway/RaspberryPi/: runHandler.py
RasberryPi gateway/RaspberryPi/certs/: ca.crt  client.crt  client.key
RasberryPi gateway/central/: CMakeLists.txt  prj.conf
RasberryPi gateway/central/src/: main.c
RasberryPi gateway/freebot_peripheral/: CMakeLists.txt  app.overlay  prj.conf
RasberryPi gateway/freebot_peripheral/boards/arm/freebot-nrf52840/: freebot-nrf52840.dts
RasberryPi gateway/freebot_peripheral/lib/freebot/inc/: fb_io.h  fb_pwr.h  freebot.h
RasberryPi gateway/freebot_peripheral/lib/freebot/src/: fb_io.c  fb_pwr.c
RasberryPi gateway/freebot_peripheral/src/: main.c
Robotics controll/own_gatt_service_central/: CMakeLists.txt  app.overlay  prj.conf
Robotics controll/own_gatt_service_central/src/: gatt_chars.h  main.c
Robotics controll/own_gatt_service_peripheral/: CMakeLists.txt  prj.conf
Robotics controll/own_gatt_service_peripheral/src/: gatt_chars.c  main.c
Robotics controll/own_gatt_service_peripheral/src/freebot/: fb_io.c  fb_io.h  fb_motor.c  fb_motor.h  fb_pwr.c  fb_pwr.h  freebot.h
TICK/: AlertVoltageTaskCode.txt  kapacitor.generated1.conf  test.conf
UI & PubSub/: publisher.py  subscriber.py
UI & PubSub/UI/: ControlPublisher.py
UI & PubSub/UI/templates/: index.html
